# crossword

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  pyproject.toml
src/: config.py  enums.py
src/api/: dependencies.py  routes.py
src/api/v1/level/: level.py
src/api/v1/text/: text.py
src/repositories/: exception_handlers.py  exceptions.py
src/repositories/apis/crossmaker/: repositories.py
src/repositories/db/: __init__.py  repositories.py
src/repositories/db/migrations/: env.py
src/repositories/db/migrations/versions/: 0111afc5daaa_init.py  77436774f0dd_init.py  dca4c173cfe3_init.py  e5ed493866f2_init.py
src/repositories/db/models/: __init__.py  level.py  level_word.py  word.py
src/schemas/: char.py  complexity.py  level.py  text.py  text_stat.py  word.py
src/services/: analyzer.py  cross_maker.py  level.py  word.py
