[tool.poetry]
name = "crossword"
version = "0.1.0"
authors = ["Server Chaush <chaush.s.i20@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
mypy = "^1.11.2"
textstat = "^0.7.4"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
