[tool.poetry]
name = "crossword"
version = "0.1.0"
authors = ["Server Chaush <chaush.s.i20@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
mypy = "^1.11.2"
textstat = "^0.7.4"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
